Fix footer text contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,7 @@ h1 {
 }
 
 #footer a, #footer p {
-  color: #777;
+  color: #898989;
 }
 
 #footer a.btn {
